<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calculator"
    android:weightSum="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberEntry" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/buttonPlus"
            android:text="@string/plus"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_weight="1" />

        <Button
            android:text="@string/minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMinus"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/times"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTimes"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_weight="1" />

        <Button
            android:text="@string/obelus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonObelus"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:text="@string/equal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEqual" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Result"
        android:layout_weight="0.09" />

</LinearLayout>